# ollama2llama

./: Cargo.toml  LICENSE.md  README.md
src/: args.rs  config.rs  main.rs
