[package]
name = "ollama2llama"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["@Exotik850"]
repository = "https://github.com/Exotik850/ollama2llama"
description = "A tool for constructing and managing a llama-swap configuration file with Ollama models"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
ollama-file-find = { version = "0.1.5" }
# ollama-file-find = { git = "https://github.com/Exotik850/ollama-file-find.git" }
serde = { version = "1.0", features = ["derive"] }

# MAYBE: Switch to maintained saphyr crate?
serde_yaml = "0.9.34"


[profile.release]
strip = true
opt-level = "z"